ddetect (1.07) UNRELEASED; urgency=low

  * Colin Watson
    - Look through all of /proc/device-tree/, not just the mac-io bus.
      Slower but apparently necessary for at least the therm_* fan
      controllers, which are on uni-n here.

 -- Colin Watson <cjwatson@debian.org>  Thu, 30 Sep 2004 13:37:08 +0100

ddetect (1.06) unstable; urgency=low

  * Colin Watson
    - Add the ability to back up from the error messages you get if
      ethdetect can't find any network interfaces. We could probably do with
      a state machine of some kind here.
    - mac-io bus detection improvements:
      + Detect mesh SCSI controller (closes: #269655, #271419).
      + Detect mace Ethernet controller.
      + Detect mac53c94 SCSI controller.
      + Detect therm_adt746x and therm_windtunnel fan controllers, although
        only post-reboot for now since those modules aren't in
        linux-kernel-di-powerpc-*.
      + Cope with /proc/device-tree/aliases/mac-io pointing to a symlink.
  * Bastian Blank
    - Add archdetect-deb package.
  * Joey Hess
    - Temporarily disable archdetect-deb for this upload, don't want to wait
      for NEW processing for a deb.
  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - German (de.po) by Dennis Stampfer
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Spanish (Castilian) (es.po) by Javier Fernandez-Sanguino Peña
    - French (fr.po) by French Team
    - Hebrew (he.po) by Lior Kaplan
    - Lithuanian (lt.po) by Kęstutis Biliūnasn
    - Bøkmal, Norwegian (nb.po) by Axel Bojer
    - Polish (pl.po) by Bartosz Fenski
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Russian (ru.po) by Russian L10N Team
    - Slovenian (sl.po) by Jure Čuhalev
    - Swedish (sv.po) by Per Olofsson

 -- Joey Hess <joeyh@debian.org>  Mon, 27 Sep 2004 17:02:47 -0400

ddetect (1.05) unstable; urgency=low

  * Joey Hess
    - Add usb nic modules to the manual module list. Closes: #262638, #267402