@@ -4,8 +4,13 @@ ddetect (1.07) UNRELEASED; urgency=low
     - Look through all of /proc/device-tree/, not just the mac-io bus.
       Slower but apparently necessary for at least the therm_* fan
       controllers, which are on uni-n here.
+  * Joshua Kwan
+    - Fix C99isms from arch-specific archdetects to eliminate build
+      failures (don't know why they were not caught before):
+        . archdetect-arm-linux.c
+        . archdetect-m68k-linux.c
 
- -- Colin Watson <cjwatson@debian.org>  Thu, 30 Sep 2004 13:37:08 +0100
+ -- Joshua Kwan <joshk@triplehelix.org>  Sat,  2 Oct 2004 13:07:17 -0700
 
 ddetect (1.06) unstable; urgency=low
 
